# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

platform(
    name = "stm32",
    constraint_values = [
        "@pigweed//pw_malloc_freelist:backend",
        # Use the baremetal backend for stm32f429 defined in upstream Pigweed.
        "@pigweed//pw_sys_io_baremetal_stm32f429:backend",
        "@platforms//cpu:armv7e-m",
        "@platforms//os:none",
        # Target the cortex-m4. Bazel selects the right toolchain based on
        # this.
        "@pw_toolchain//constraints/arm_mcpu:cortex-m4+nofp",
    ],
)
